# BMM_Bool_translib

./: .gitignore  CMakeLists.txt  README.md  SESSION_REPORT.md  STATUS.md  TEST_TIMING_REPORT.md  TRANSLATION_MATRIX.md  bmm-openmp-and-theta.patch  combined.patch  generate_status.sh
.devcontainer/: Dockerfile  SOURCE.md  devcontainer.json
.github/workflows/: ci.yml
aig/: README.md  aig_to_anf.cpp  aig_to_anf.hpp  aig_to_bdd.cpp  aig_to_bdd.hpp  aig_to_thr.cpp  aig_to_thr.hpp  aig_to_tt.cpp  aig_to_tt.hpp  test_aig.cpp  tt_to_aig.cpp  tt_to_aig.hpp
anf/: README.md  anf_to_aig.cpp  anf_to_aig.hpp  anf_to_bdd.cpp  anf_to_bdd.hpp  anf_to_thr.cpp  anf_to_thr.hpp  anf_to_tt.cpp  anf_to_tt.hpp  bench_real_corpus.cpp  test_anf.cpp  tt_to_anf.cpp  tt_to_anf.hpp
bdd/: README.md  bdd_to_aig.cpp  bdd_to_aig.hpp  bdd_to_anf.cpp  bdd_to_anf.hpp  bdd_to_thr.cpp  bdd_to_thr.hpp  bdd_to_tt.cpp  bdd_to_tt.hpp  bdd_to_tt_cuda.cpp  bdd_to_tt_cuda.hpp  chow_database_generated.inc  chow_detail.hpp  test_bdd.cpp  test_bdd_metrics.cpp  tt_to_bdd.cpp  tt_to_bdd.hpp
benchmarks/: LARGE_SCALE_REPORT.md  anf_dimacs_loader.hpp  cnf_dimacs_loader.hpp  dddmp_loader.hpp  large_scale_bench.cpp  large_scale_generators.hpp  openmp_scaling.hpp  scaling.hpp  tbb_scaling.hpp
benchmarks/cudd_stubs/: util.h
benchmarks/scripts/: download_dimacs.sh  download_epfl.sh  download_hwmcc.sh  download_iis_nsk.sh  download_iscas.sh  download_pb.sh  download_satlib.sh  generate_sbox.cpp  sample_iis_nsk_large.py
core/: CONVENTIONS.md  anf_repr.hpp  bdd_order_heuristics.hpp  common.hpp  test_core.cpp
gpu/: bdd_kernel.cu  bdd_kernel.hpp  cuda_utils.hpp  gpu_bdd.hpp  gpu_serializer.cpp  gpu_serializer.hpp
profiling/: README.md  perf_report.sh
thr/: README.md  bench_real_corpus.cpp  test_thr.cpp  thr_to_aig.cpp  thr_to_aig.hpp  thr_to_anf.cpp  thr_to_anf.hpp  thr_to_bdd.cpp  thr_to_bdd.hpp  thr_to_tt.cpp  thr_to_tt.hpp  tt_to_thr.cpp  tt_to_thr.hpp
verify/: CHAIN_TESTS_REPORT.md  REAL_DATASETS_REPORT.md  chain_tests.cpp  chain_utils.hpp  config_dump.cpp  diag_anf_dataset.cpp  diag_anf_sample_dump.cpp  diag_anf_to_bdd_dataset.cpp  diag_chow_database_gen.cpp  diag_cnf_chain_dataset.cpp  diag_cnf_dataset.cpp  diag_dddmp_dataset.cpp  diag_dddmp_probe.cpp  diag_dddmp_sweep.cpp  real_datasets_tests.cpp  reference_builders.cpp  reference_builders.hpp  test_main.cpp  test_runner.hpp
verify/ground_truth/: ground_truth.cpp  ground_truth.hpp
verify/metamorphic/: metamorphic.cpp  metamorphic.hpp
verify/sat_encoding/: sat_encoding.cpp  sat_encoding.hpp  test_sat_encoding.cpp
